chore: Add a reference to the projects in the _quarto.yml configuration file.

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -24,6 +24,7 @@ website:
       - syllabus/index.qmd
       - schedule/index.qmd
       - slides/index.qmd
+      - projects/index.qmd
 
   page-footer:
     left: '<a href="https://github.com/SecuritySynapse/www.securitysynapse.org/graphs/contributors" aria-label="Security Synapse Maintainers">{{< iconify fa copyright >}} Security Synapse</a>'
